--- a/note.html
+++ b/note.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/note/main.jsx"></script>
+    <script type="module" src="/src/Note/MainNote.jsx"></script>
   </body>
 </html>
